--- a/tech-support-site/package.json
+++ b/tech-support-site/package.json
@@ -8,7 +8,8 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
