--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "primereact": "^4.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-spring": "^8.0.27",
