--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
+    "primeflex": "^1.3.1",
+    "primeicons": "^4.0.0",
+    "primereact": "^4.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-spring": "^8.0.27",
