--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "tech-support-site",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
-    "bootstrap": "^4.4.1",
-    "classnames": "^2.2.6",
-    "primeflex": "^1.3.1",
-    "primeicons": "^4.0.0",
-    "primereact": "^4.2.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
-    "react-spring": "^8.0.27",
-    "react-transition-group": "^4.3.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "tech-support-site",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.25",
+		"@fortawesome/free-solid-svg-icons": "^5.11.2",
+		"@fortawesome/react-fontawesome": "^0.1.7",
+		"bootstrap": "^4.4.1",
+		"classnames": "^2.2.6",
+		"primeflex": "^1.3.1",
+		"primeicons": "^4.0.0",
+		"primereact": "^4.2.2",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-reveal": "^1.2.2",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "^3.4.1",
+		"react-spring": "^8.0.27",
+		"react-transition-group": "^4.3.0"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "CI=false react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
